# pdm-template-rudeigerc

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  docs.yaml  release.yaml
tests/unit/: test_hello_world.py
