
[project]
name = "pdm-template-rudeigerc"
version = "0.1.0"
description = "A simple Python project template for PDM."
authors = [
    {name = "rudeigerc", email = "rudeigerc@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.1.0",
    "black>=23.9.1",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.6",
    "mkdocstrings>=0.23.0",
    "mkdocstrings-python>=1.6.2",
]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
docs = "mkdocs serve"
test = "pytest -v tests"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tuna"

[[tool.pdm.source]]
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
name = "sjtug"

[tool.ruff]
line-length = 88
select = [
    # flake8-bugbear
    "B",
    # pycodestyle - Error
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # pycodestyle - Warning
    "W"
]
ignore = ["E501"]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]
exclude = [".venv"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
no_implict_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true
