
[project]
name = "pdm-template-rudeigerc"
dynamic = ["version"]
description = "A simple Python project template for PDM."
authors = [
    {name = "Yuchen Cheng", email = "rudeigerc@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Documentation = "https://rudeigerc.github.io/pdm-template-rudeigerc/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.1.2",
    "mypy>=1.6.1",
    "pre-commit>=3.5.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.6",
    "mkdocstrings>=0.23.0",
    "mkdocstrings-python>=1.6.2",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
docs = "mkdocs serve"
test = "pytest -v tests"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tuna"

[[tool.pdm.source]]
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
name = "sjtug"

[tool.pdm.version]
source = "scm"

[tool.ruff]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]

[tool.ruff.isort]
known-first-party = ["pdm_template_rudeigerc"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[tool.coverage.run]
parallel = true
source = [
    "pdm_template_rudeigerc",
    "tests",
]
