
[project]
name = "pdm-template-rudeigerc"
dynamic = ["version"]
description = "A simple Python project template for PDM."
authors = [
    {name = "Yuchen Cheng", email = "rudeigerc@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Documentation = "https://rudeigerc.github.io/pdm-template-rudeigerc/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.3.4",
    "mypy>=1.9.0",
    "pre-commit==3.5.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.15",
    "mkdocstrings[python]>=0.24.1",
]
test = [
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"
check = "ruff check ."
fmt = "ruff format ."
docs = "mkdocs serve"
tests = "pytest -v tests"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tuna"

[[tool.pdm.source]]
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
name = "sjtug"

[tool.pdm.version]
source = "scm"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle - Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle - Warning
    "UP", # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "W191", # tab-indentation
]

[tool.ruff.lint.isort]
known-first-party = ["pdm_template_rudeigerc"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true

[tool.coverage.run]
parallel = true
source = [
    "src/pdm_template_rudeigerc",
    "tests",
]
